# outcome-receipts

./: .gitignore  .pa11yci.json  .pre-commit-config.yaml  .semgrep-waivers.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  action.yml  lighthouserc.cjs  package-lock.json  package.json  pyproject.toml  waivers.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  allowed_signers
.github/DISCUSSION_TEMPLATE/: demo-help.yml
.github/ISSUE_TEMPLATE/: config.yml  demo-run.yml  schema-mapping.yml
.github/rulesets/: main.json
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml  standards.yml
docs/: CONFORMANCE-AUDIT-2026-07-12.md  DATA-CARD.md  DOCUMENTATION-AUDIT.md  I18N.md  LANGUAGE_POLICY.md  MODEL-CARD.md  OPERATIONS.md  PROJECT-SCOPE.md  README.md  RELEASING.md  RESEARCH-ROADMAP.md  RESPONSIBLE-TECH-AUDITS.md  ROADMAP.md  THREAT-MODEL.md  TRY_THE_DEMO.md  USER-RESEARCH.md  ci-action.md  compliance-matrix.md  drafting.md  metric-mapping.md
docs/a11y/: ACR.md  STATEMENT.md  screen-reader-walkthrough-2026-07-12.md
docs/adr/: 0000-record-architecture-decisions.md  0001-portfolio-standards-conformance-uplift.md  0002-solo-maintainer-review-count.md
docs/audits/: ai-impact-assessment-drafting.md  ai-risk-register.md  iso42001-soa.md  lang-of-parts.md  openssf-scorecard-2026-07-12.md  red-team-2026-07-12.md  residual-risk-register.md
docs/cards/: data-card-reporting.md  model-card.md
docs/data/: organization-service-export.md  synthetic-fixtures.md
docs/decisions/: 0000-record-architecture-decisions.md  0001-engine-receipts-grounding.md  0002-templates-charts-comparison.md  0003-definitions-provenance-trace-verify.md  0004-hash-chained-export-ledger.md  0004-metric-units-beyond-count-and-percent.md  0004-receipt-canonicalization-and-schema.md  0004-suppression-runs-before-drafting.md  0004-tamper-evident-signed-audit-bundle.md  0004-whole-bundle-verification.md  0005-disclosure-scope-and-exhaustive-recovery-check.md  0005-receipt-canonicalization-and-schema.md  0006-whole-bundle-verification.md  0007-numeric-span-match-policy.md
docs/incidents/: README.md
docs/launch/: CAMPAIGN.md  OUTREACH.md  every-number-has-a-receipt.md
docs/rulesets/: README.md  main.json
docs/schema/: receipts.schema.json
eval/: grounding-benchmark.jsonl  report.md
examples/board-report/: report.toml  services.csv
examples/grant-report/: report.toml
examples/housing-demo/: receipts.json  report.toml  services.csv
examples/mapping/: requirements.json
examples/multi-funder/: report.toml  services.csv
scripts/: a11y.mjs  check_conformance.py  check_i18n.py  check_source_hygiene.py  check_waivers.py  generate_grounding_benchmark.py  install-security-tools.sh  repo-traffic.sh
src/outcome_receipts/: __init__.py  bundle.py  cards.py  charts.py  cli.py  clock.py  comparison.py  config.py  copy.py  diff.py  draft.py  engine.py  evaluate.py  grounding.py  ledger.py  mapping.py  model_draft.py  models.py  provenance.py  report.py  scaffold.py  suppression.py  trace.py  verify.py
src/outcome_receipts/locales/: messages.pot
src/outcome_receipts/locales/en/LC_MESSAGES/: messages.mo  messages.po
src/outcome_receipts/locales/es/LC_MESSAGES/: messages.mo  messages.po
tests/: test_approval.py  test_bundle.py  test_cards.py  test_caveat.py  test_charts.py  test_cli.py  test_comparison.py  test_config_sections.py  test_conformance.py  test_data_checks.py  test_definition.py  test_diff.py  test_draft_and_config.py  test_engine.py  test_eval_benchmark.py  test_evaluate.py  test_grounded_sections.py  test_grounding_gate.py  test_grounding_locale.py  test_grounding_properties.py  test_i18n.py  test_indicator_mapping.py  test_kind.py  test_ledger.py  test_loader_hardening.py  test_manifest_schema.py  test_mapping.py  test_model_draft.py  test_multi_template.py  test_provenance.py  test_public_api.py  test_reconciliation.py  test_release_workflow.py  test_report_sections.py  test_scaffold.py  test_suppression.py  test_trace.py  test_verify.py  test_version.py
tests/locale_acceptance/: en.md  es.md
