[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outcome-receipts"
version = "0.1.0"
description = "Draft funder outcome reports where every number is a receipt, with a fail-closed grounding gate."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Chelsea Kelly-Reif" }]
keywords = [
  "nonprofit",
  "grant-reporting",
  "outcomes",
  "provenance",
  "hallucination",
  "human-services",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.scripts]
receipts = "outcome_receipts.cli:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "mypy>=1.8", "ruff>=0.5", "pip-audit>=2.10"]

[project.urls]
Homepage = "https://github.com/ChelseaKR/outcome-receipts"
Documentation = "https://github.com/ChelseaKR/outcome-receipts/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/outcome_receipts"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "S", "C90", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# S101 (assert) is pytest's own idiom, not a security-relevant use of assert in
# shipped code; every other rule in the select set still applies to tests/.
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
-q \
--strict-markers \
--strict-config \
--import-mode=importlib \
--cov=outcome_receipts \
--cov-branch \
--cov-report=term-missing \
--cov-fail-under=90
"""

[tool.coverage.run]
source = ["outcome_receipts"]
branch = true
